# android-ollvm-sample

./: README.md
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/llvm_obfuscator/: CMakeLists.txt
app/patches/: ndk_driver_patch.patch  windows_random.patch
app/src/androidTest/java/org/leyfer/test/testobfuscator/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/org/leyfer/test/testobfuscator/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/org/leyfer/test/testobfuscator/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
